

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

				 Copyright (C) 2003-2015

                                     Andre Deperrois


*******************************************************************************



xflr5 v6.11 May xxxth, 2015
	- improved the issue of the plane-fin intersection when the body is translated
	- enabled launching xflr5 from a project file, and opening the model
	- added a viewer for the plane object - not yet an editor
	- added an import/export option of a plane definition to an xml file
	- added an import/export optin for body objects to an xml file


xflr5 v6.10.04 April 12th, 2015
	- Corrected a potential crash bug when deleting a plane with polars
	- Added a standard ISA model for the calculation of air properties
        - Corrected the issues with the reference lengths after wing scaling
        - Fixed the bugs related to the import operation of a body definition from a text file
        - Fix for retina displays on OS X
        - Corrected the export of plane polars to text files to include the sideslip variable
        - Other minor corrections and improvements



xflr5 v6.10.03 April 13th, 2014
	- Corrected the incorrect calculation of the mid camber line of foil with flaps
	- Corrected the crash bug when calculating a wing with flaps using the LLT method
	- Corrected the crash bug when deleting foils from the manage dialog box


xflr5 v6.10.02 March 21st, 2014
	- Added an option to scale the wing's area and aspect ratio
	- Fixed a potential crash bug in Graph scales drawing when no project is loaded
	- Improved the support for OpenGL on Windows platforms
	- Changed the calculation of satbility derivatives to be always invsicid - no noticeable impact on results