@@ -17,11 +17,13 @@
 
 
 xflr5 v6.11 May xxxth, 2015
+	- replaced the rendertext methods in OpenGL by custom implementations to improve the rendering quality
 	- improved the issue of the plane-fin intersection when the body is translated
 	- enabled launching xflr5 from a project file, and opening the model
 	- added a viewer for the plane object - not yet an editor
 	- added an import/export option of a plane definition to an xml file
 	- added an import/export optin for body objects to an xml file
+	- Other minor corrections and improvements
 
 
 xflr5 v6.10.04 April 12th, 2015
